--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,7 +1,7 @@
-{% load static  %}
+{% load static %}
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-    <a href="../index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="/" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>CarServ</h2>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -9,9 +9,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="../index.html" class="nav-item nav-link">Home</a>
-            <a href="../about.html" class="nav-item nav-link">About</a>
-            <a href="../service.html" class="nav-item nav-link">Services</a>
+            <a href="/" class="nav-item nav-link">Home</a>
+            <a href="about/" class="nav-item nav-link">About</a>
+            <a href="service/" class="nav-item nav-link">Services</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu fade-up m-0">
