--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,13 +14,13 @@
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu fade-up m-0">
-                    <a href="../booking.html" class="dropdown-item">Booking</a>
-                    <a href="../team.html" class="dropdown-item">Technicians</a>
-                    <a href="../testimonial.html" class="dropdown-item">Testimonial</a>
-                    <a href="../404.html" class="dropdown-item active">404 Page</a>
+                    <a href="booking/" class="dropdown-item">Booking</a>
+                    <a href="team/" class="dropdown-item">Technicians</a>
+                    <a href="testimonial/" class="dropdown-item">Testimonial</a>
+                    <a href="error/" class="dropdown-item active">404 Page</a>
                 </div>
             </div>
-            <a href="../contact.html" class="nav-item nav-link">Contact</a>
+            <a href="contact/" class="nav-item nav-link">Contact</a>
         </div>
         <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
                 class="fa fa-arrow-right ms-3"></i></a>
