--- a/templates/index.html
+++ b/templates/index.html
@@ -5,46 +5,28 @@
     <div class="container-fluid p-0 mb-5">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="{% static 'img/carousel-bg-1.jpg' %}" alt="Image">
-                    <div class="carousel-caption d-flex align-items-center">
-                        <div class="container">
-                            <div class="row align-items-center justify-content-center justify-content-lg-start">
-                                <div class="col-10 col-lg-7 text-center text-lg-start">
-                                    <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Servicing
-                                        //</h6>
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Car Repair
-                                        Service Center</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                                <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" src="{% static 'img/carousel-1.png' %}" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="{% static 'img/carousel-bg-2.jpg' %}" alt="Image">
-                    <div class="carousel-caption d-flex align-items-center">
-                        <div class="container">
-                            <div class="row align-items-center justify-content-center justify-content-lg-start">
-                                <div class="col-10 col-lg-7 text-center text-lg-start">
-                                    <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Servicing
-                                        //</h6>
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Car Wash
-                                        Service Center</h1>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                                <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" src="{% static 'img/carousel-2.png' %}" alt="">
+                {% for banner in banners %}
+
+                    <div class="carousel-item {% if forloop.first %} active {% endif %}">
+                        <img class="w-100" src="{{ banner.background_image.url }}" alt="Image">
+                        <div class="carousel-caption d-flex align-items-center">
+                            <div class="container">
+                                <div class="row align-items-center justify-content-center justify-content-lg-start">
+                                    <div class="col-10 col-lg-7 text-center text-lg-start">
+                                        <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Servicing
+                                            //</h6>
+                                        <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">{{ banner.title }}</h1>
+                                        <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
+                                                class="fa fa-arrow-right ms-3"></i></a>
+                                    </div>
+                                    <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
+                                        <img class="img-fluid" src="{{ banner.image.url }}" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                {% endfor %}
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
                     data-bs-slide="prev">
@@ -126,18 +108,18 @@
 
                     <div class="row g-4 mb-3 pb-3">
                         {% for ser in services %}
-                        <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
-                            <div class="d-flex">
-                                <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
-                                     style="width: 45px; height: 45px;">
-                                    <span class="fw-bold text-secondary">0{{ forloop.counter }}</span>
-                                </div>
-                                <div class="ps-3">
-                                    <h6>{{ ser.description }}</h6>
-                                    <span>{{ ser.title }}</span>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
+                                <div class="d-flex">
+                                    <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
+                                         style="width: 45px; height: 45px;">
+                                        <span class="fw-bold text-secondary">0{{ forloop.counter }}</span>
+                                    </div>
+                                    <div class="ps-3">
+                                        <h6>{{ ser.description }}</h6>
+                                        <span>{{ ser.title }}</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                         {% endfor %}
                     </div>
                     <a href="" class="btn btn-primary py-3 px-5">Read More<i class="fa fa-arrow-right ms-3"></i></a>
