--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
                         amet</p>
 
                     <div class="row g-4 mb-3 pb-3">
-                        {% for ser in services %}
+                        {% for abouts in about %}
                             <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="d-flex">
                                     <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
@@ -115,8 +115,8 @@
                                         <span class="fw-bold text-secondary">0{{ forloop.counter }}</span>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>{{ ser.description }}</h6>
-                                        <span>{{ ser.title }}</span>
+                                        <h6>{{ abouts.description }}</h6>
+                                        <span>{{ abouts.title }}</span>
                                     </div>
                                 </div>
                             </div>
@@ -170,125 +170,38 @@
             <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="col-lg-4">
                     <div class="nav w-100 nav-pills me-4">
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 active"
-                                data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
-                            <i class="fa fa-car-side fa-2x me-3"></i>
-                            <h4 class="m-0">Diagnostic Test</h4>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
-                                data-bs-toggle="pill"
-                                data-bs-target="#tab-pane-2" type="button">
-                            <i class="fa fa-car fa-2x me-3"></i>
-                            <h4 class="m-0">Engine Servicing</h4>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
-                                data-bs-toggle="pill"
-                                data-bs-target="#tab-pane-3" type="button">
-                            <i class="fa fa-cog fa-2x me-3"></i>
-                            <h4 class="m-0">Tires Replacement</h4>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0"
-                                data-bs-toggle="pill"
-                                data-bs-target="#tab-pane-4" type="button">
-                            <i class="fa fa-oil-can fa-2x me-3"></i>
-                            <h4 class="m-0">Oil Changing</h4>
-                        </button>
+                        {% for service in services %}
+                            <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4
+                            {% if forloop.first %}active {% endif %}"
+                                    data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
+                                <i class="fa fa-car-side fa-2x me-3"></i>
+                                <h4 class="m-0">{{ service.name }}</h4>
+                            </button>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="tab-content w-100">
-                        <div class="tab-pane fade show active" id="tab-pane-1">
-                            <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100"
-                                             src="{% static 'img/service-1.jpg' %}"
-                                             style="object-fit: cover;" alt="">
+                        {% for ser in services %}
+                            <div class="tab-pane fade {% if forloop.first %} show active{% endif %}"
+                                 id="tab-pane-{{ forloop.counter }}">
+                                <div class="row g-4">
+                                    <div class="col-md-6" style="min-height: 350px;">
+                                        <div class="position-relative h-100">
+                                            <img class="position-absolute img-fluid w-100 h-100"
+                                                 src="{% static 'img/service-1.jpg' %}"
+                                                 style="object-fit: cover;" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h3 class="mb-3">{{ ser.title }}</h3>
+                                        <p class="mb-4">{{ ser.description }}</p>
+                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i
+                                                class="fa fa-arrow-right ms-3"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam
-                                        amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                                        justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
                             </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-2">
-                            <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100"
-                                             src="{% static 'img/service-2.jpg' %}"
-                                             style="object-fit: cover;" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam
-                                        amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                                        justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-3">
-                            <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100"
-                                             src="{% static 'img/service-3.jpg' %}"
-                                             style="object-fit: cover;" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam
-                                        amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                                        justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-4">
-                            <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100"
-                                             src="{% static 'img/service-4.jpg' %}"
-                                             style="object-fit: cover;" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam
-                                        amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                                        justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
