--- a/templates/index.html
+++ b/templates/index.html
@@ -231,27 +231,30 @@
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn"
                          data-wow-delay="0.6s">
                         <h1 class="text-white mb-4">Book For A Service</h1>
-                        <form>
+                        <form action="{% url 'orders:create' %}" method="post">
+                        {% csrf_token %}
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name"
+                                    <input name="name" type="text" class="form-control border-0" placeholder="Your Name"
                                            style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email"
+                                    <input name="email" type="email" class="form-control border-0"
+                                           placeholder="Your Email"
                                            style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
+                                    <select name="service_type" class="form-select border-0" style="height: 55px;">
                                         <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
+                                        {% for service in services %}
+                                            <option value="{{ service.name }}">{{ service.name }}</option>
+                                        {% endfor %}
+
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text"
+                                        <input name="date" type="text"
                                                class="form-control border-0 datetimepicker-input"
                                                placeholder="Service Date" data-target="#date1"
                                                data-toggle="datetimepicker"
@@ -259,7 +262,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Request"></textarea>
+                                    <textarea name="message" class="form-control border-0" placeholder="Special Request"></textarea>
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-secondary w-100 py-3" type="submit">Book Now</button>
